--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^7.1.1",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "style-loader": "^4.0.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
